--- a/.github/workflows/build_v8.yml
+++ b/.github/workflows/build_v8.yml
@@ -14,61 +14,61 @@ env:
   VERSION: 8.4.371.19
 
 jobs:
-  build_android_arm_v8:
-    name: Android (arm64-v8a)
-    runs-on: ubuntu-18.04
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run build script
-      run: |
-        cd $GITHUB_WORKSPACE
-        sh ./android_armv8.sh ${{env.VERSION}}
-    - uses: actions/upload-artifact@v2
-      with:
-        name: v8_bin
-        path: ~/v8/v8/output/**/*
+#   build_android_arm_v8:
+#     name: Android (arm64-v8a)
+#     runs-on: ubuntu-18.04
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Run build script
+#       run: |
+#         cd $GITHUB_WORKSPACE
+#         sh ./android_armv8.sh ${{env.VERSION}}
+#     - uses: actions/upload-artifact@v2
+#       with:
+#         name: v8_bin
+#         path: ~/v8/v8/output/**/*
 
-  build_android_arm_v7:
-    name: Android (armeabi-v7a)
-    runs-on: ubuntu-18.04
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run build script
-      run: |
-        cd $GITHUB_WORKSPACE
-        sh ./android_armv7.sh ${{env.VERSION}}
-    - uses: actions/upload-artifact@v2
-      with:
-        name: v8_bin
-        path: ~/v8/v8/output/**/*
+#   build_android_arm_v7:
+#     name: Android (armeabi-v7a)
+#     runs-on: ubuntu-18.04
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Run build script
+#       run: |
+#         cd $GITHUB_WORKSPACE
+#         sh ./android_armv7.sh ${{env.VERSION}}
+#     - uses: actions/upload-artifact@v2
+#       with:
+#         name: v8_bin
+#         path: ~/v8/v8/output/**/*
         
-  build_android_x86_64:
-    name: Android (x86_64)
-    runs-on: ubuntu-18.04
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run build script
-      run: |
-        cd $GITHUB_WORKSPACE
-        sh ./android_x64.sh ${{env.VERSION}}
-    - uses: actions/upload-artifact@v2
-      with:
-        name: v8_bin
-        path: ~/v8/v8/output/**/*
+#   build_android_x86_64:
+#     name: Android (x86_64)
+#     runs-on: ubuntu-18.04
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Run build script
+#       run: |
+#         cd $GITHUB_WORKSPACE
+#         sh ./android_x64.sh ${{env.VERSION}}
+#     - uses: actions/upload-artifact@v2
+#       with:
+#         name: v8_bin
+#         path: ~/v8/v8/output/**/*
         
-  build_linux:
-    name: Linux
-    runs-on: ubuntu-18.04
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run build script
-      run: |
-        cd $GITHUB_WORKSPACE
-        sh ./linux.sh ${{env.VERSION}}
-    - uses: actions/upload-artifact@v2
-      with:
-        name: v8_bin
-        path: ~/v8/v8/output/**/*
+#   build_linux:
+#     name: Linux
+#     runs-on: ubuntu-18.04
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Run build script
+#       run: |
+#         cd $GITHUB_WORKSPACE
+#         sh ./linux.sh ${{env.VERSION}}
+#     - uses: actions/upload-artifact@v2
+#       with:
+#         name: v8_bin
+#         path: ~/v8/v8/output/**/*
 
   build_windows:
     name: Windows
@@ -90,35 +90,35 @@ jobs:
         name: v8_bin_win64
         path: v8/v8/output/**/*
         
-  build_windows_md:
-    name: Windows-MD
-    runs-on: windows-2019
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run build script
-      shell: cmd
-      run: |
-        cd %GITHUB_WORKSPACE%
-        call .\windows_64MD.cmd ${{env.VERSION}}
-    - uses: actions/upload-artifact@v2
-      with:
-        name: v8_bin
-        path: v8/v8/output/**/*
+#   build_windows_md:
+#     name: Windows-MD
+#     runs-on: windows-2019
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Run build script
+#       shell: cmd
+#       run: |
+#         cd %GITHUB_WORKSPACE%
+#         call .\windows_64MD.cmd ${{env.VERSION}}
+#     - uses: actions/upload-artifact@v2
+#       with:
+#         name: v8_bin
+#         path: v8/v8/output/**/*
         
-  build_windows_md_dll:
-    name: Windows-MD-DLL
-    runs-on: windows-2019
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run build script
-      shell: cmd
-      run: |
-        cd %GITHUB_WORKSPACE%
-        call .\windows_64MD_DLL.cmd ${{env.VERSION}}
-    - uses: actions/upload-artifact@v2
-      with:
-        name: v8_bin
-        path: v8/v8/output/**/*
+#   build_windows_md_dll:
+#     name: Windows-MD-DLL
+#     runs-on: windows-2019
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Run build script
+#       shell: cmd
+#       run: |
+#         cd %GITHUB_WORKSPACE%
+#         call .\windows_64MD_DLL.cmd ${{env.VERSION}}
+#     - uses: actions/upload-artifact@v2
+#       with:
+#         name: v8_bin
+#         path: v8/v8/output/**/*
         
   build_windows_32:
     name: Windows-32
@@ -135,53 +135,53 @@ jobs:
         name: v8_bin
         path: v8/v8/output/**/*
           
-  build_macos:
-    name: macOS
-    runs-on: macos-10.15
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Xcode 12.0 to use SDK 10.15
-      run: sudo xcode-select -switch "/Applications/Xcode_12.app"
-    - name: Run build script
-      run: |
-        cd $GITHUB_WORKSPACE
-        sh ./macos.sh ${{env.VERSION}}
-    - uses: actions/upload-artifact@v2
-      with:
-        name: v8_bin
-        path: ~/v8/v8/output/**/*
+#   build_macos:
+#     name: macOS
+#     runs-on: macos-10.15
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Use Xcode 12.0 to use SDK 10.15
+#       run: sudo xcode-select -switch "/Applications/Xcode_12.app"
+#     - name: Run build script
+#       run: |
+#         cd $GITHUB_WORKSPACE
+#         sh ./macos.sh ${{env.VERSION}}
+#     - uses: actions/upload-artifact@v2
+#       with:
+#         name: v8_bin
+#         path: ~/v8/v8/output/**/*
         
-  build_macos_dll:
-    name: macOS-DLL
-    runs-on: macos-10.15
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Xcode 12.0 to use SDK 10.15
-      run: sudo xcode-select -switch "/Applications/Xcode_12.app"
-    - name: Run build script
-      run: |
-        cd $GITHUB_WORKSPACE
-        sh ./macos_DLL.sh ${{env.VERSION}}
-    - uses: actions/upload-artifact@v2
-      with:
-        name: v8_bin
-        path: ~/v8/v8/output/**/*
+#   build_macos_dll:
+#     name: macOS-DLL
+#     runs-on: macos-10.15
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Use Xcode 12.0 to use SDK 10.15
+#       run: sudo xcode-select -switch "/Applications/Xcode_12.app"
+#     - name: Run build script
+#       run: |
+#         cd $GITHUB_WORKSPACE
+#         sh ./macos_DLL.sh ${{env.VERSION}}
+#     - uses: actions/upload-artifact@v2
+#       with:
+#         name: v8_bin
+#         path: ~/v8/v8/output/**/*
 
-  build_ios:
-    name: iOS
-    runs-on: macos-10.15
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Xcode 12.0 to use SDK 10.15
-      run: sudo xcode-select -switch "/Applications/Xcode_12.app"
-    - name: Run build script
-      run: |
-        cd $GITHUB_WORKSPACE
-        sh ./ios.sh ${{env.VERSION}}
-    - uses: actions/upload-artifact@v2
-      with:
-        name: v8_bin
-        path: ~/v8/v8/output/**/*
+#   build_ios:
+#     name: iOS
+#     runs-on: macos-10.15
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Use Xcode 12.0 to use SDK 10.15
+#       run: sudo xcode-select -switch "/Applications/Xcode_12.app"
+#     - name: Run build script
+#       run: |
+#         cd $GITHUB_WORKSPACE
+#         sh ./ios.sh ${{env.VERSION}}
+#     - uses: actions/upload-artifact@v2
+#       with:
+#         name: v8_bin
+#         path: ~/v8/v8/output/**/*
   
   #build_ios_simulator:
   #  name: iOS simulator
@@ -201,7 +201,7 @@ jobs:
         
   publish:
     runs-on: ubuntu-latest
-    needs: [build_android_arm_v8,build_android_arm_v7,build_android_x86_64,build_linux,build_windows,build_windows_md,build_windows_32,build_macos,build_ios,build_windows_md_dll,build_macos_dll]
+    needs: [build_windows,build_windows_32]
     steps:
       - uses: actions/download-artifact@v1
         with:
